<resources>
    <string name="app_name">Сугайкасы</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="map_fragment">Карта поселения</string>
    <string name="news_fragment">Новости</string>
    <string name="bus_fragment">Расписание автобусов</string>
    <string name="event_fragment">Мероприятия</string>
    <string name="appeal_fragment">Обращения</string>
    <string name="appeal_my_fragment">Мои обращения</string>
    <string name="request_types">Типы запросов</string>
    <string name="user_list">Список пользователей</string>
    <string name="response_to_admin">Запросы в администрацию</string>
    <string name="response_to_lib">Запросы в библиотеку</string>
    <string name="user_fragment">Профиль</string>
    <string name="event_his">История</string>
    <string name="exit">Выход</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_or_reqister">LoginOrReqisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_sign_up">Регистрация</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Добро пожаловать !"</string>
    <string name="invalid_username">Некорректный email</string>
    <string name="invalid_password">Пароль должен быть минимум из 6 символов</string>
    <string name="invalid_password2">Пароли не совпадают</string>
    <string name="invalid_name">Введите свое имя правильно</string>
    <string name="invalid_second_name">Введите свою фамилию правильно</string>
    <string name="invalid_last_name">Введите свое отчество правильно</string>
    <string name="invalid_address">Введите свой аддрес правильно</string>
    <string name="invalid_phone">Введите свой телефон правильно, без 7</string>
    <string name="invalid_phone_length">Введите свой номер полностью</string>
    <string name="login_failed">Ошибка</string>
    <string name="signup_failed">Регистрация не доступна, попробуйте поезже</string>
    <string name="name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="last_name">Отчество</string>
    <string name="phone">Телефон</string>
    <string name="address">Адрес</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="type_request">Тип запроса</string>
    <string name="remove_title">Удалить</string>
    <string name="save_title">Сохранить</string>
    <string name="edit_event_fragment_title">Редактирование мероприятия</string>
    <string name="comment_title">Комментарий</string>
    <string name="confirm_btn_title">Потвердить</string>
    <string name="close_btn_title">Потвердить</string>
    <string name="from_title">От:</string>
    <string name="message_title">Сообщение</string>
    <string name="balance_title">Баланс</string>
    <string name="comment_tittle">Комментарий администрации:</string>
</resources>