<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map_fragment" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news_fragment" />
        <item
            android:id="@+id/nav_bus"
            android:icon="@drawable/ic_bus"
            android:title="@string/bus_fragment" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event"
            android:title="@string/event_fragment" />
        <item
            android:id="@+id/nav_appeal"
            android:icon="@drawable/ic_file"
            android:title="@string/appeal_fragment" />

        <item
        android:id="@+id/nav_my_appeal"
        android:icon="@drawable/ic_file"
        android:title="@string/appeal_my_fragment" />

        <item
        android:id="@+id/nav_request_types"
        android:icon="@drawable/ic_file"
        android:title="@string/request_types" />


        <item
            android:id="@+id/nav_user_list"
            android:icon="@drawable/ic_file"
            android:title="@string/user_list" />

        <item
            android:id="@+id/nav_response_to_admin"
            android:icon="@drawable/support_agent_24"
            android:title="@string/response_to_admin" />
        <item
            android:id="@+id/nav_response_to_lib"
            android:icon="@drawable/collections_bookmark_24"
            android:title="@string/response_to_lib" />

        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_person"
            android:title="@string/user_fragment" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/time_24"
            android:title="@string/event_his" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit"
            android:title="@string/exit" />
    </group>
</menu>