<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.signup.SignUpActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/vela_sans_bold"
                android:text="Создание профиля"
                android:textColor="@color/dark_text"
                android:textSize="20sp" />

            <com.github.jura120596.molodec.ui.components.AppEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <com.github.jura120596.molodec.ui.components.AppEditText
                android:id="@+id/second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/second_name"
                android:imeActionLabel="@string/action_sign_in_short"
                android:selectAllOnFocus="true" />

            <com.github.jura120596.molodec.ui.components.AppEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/name"
                android:imeActionLabel="@string/action_sign_in_short"
                android:selectAllOnFocus="true" />

            <com.github.jura120596.molodec.ui.components.AppEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/last_name"
                android:imeActionLabel="@string/action_sign_in_short"
                android:selectAllOnFocus="true" />

            <com.github.jura120596.molodec.ui.components.AppEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/address"
                android:imeActionLabel="@string/action_sign_in_short"
                android:selectAllOnFocus="true" />

            <com.github.jura120596.molodec.ui.components.AppEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/phone"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="10"
                android:selectAllOnFocus="true" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu"
                style="@style/ThemeOverlay.App.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:counterOverflowTextAppearance="@style/hintText"
                app:counterTextAppearance="@style/hintText"
                app:endIconTint="@color/black"
                app:errorTextAppearance="@style/hintText"
                app:helperTextTextAppearance="@style/hintText"
                app:hintTextAppearance="@style/hintText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Выберите район"
                    android:inputType="none"
                    android:textSize="15sp"
                    app:endIconMode="clear_text" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu2"
                style="@style/ThemeOverlay.App.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:counterOverflowTextAppearance="@style/hintText"
                app:counterTextAppearance="@style/hintText"
                app:endIconTint="@color/black"
                app:errorTextAppearance="@style/hintText"
                app:helperTextTextAppearance="@style/hintText"
                app:hintTextAppearance="@style/hintText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:hint="Выберите населенный пункт"
                    android:inputType="none"
                    android:textSize="15sp"
                    app:endIconMode="clear_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/blue_btn_small"
                android:enabled="false"
                android:text="@string/action_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/vela_sans_bold"
                android:text="Заполняя данные и нажимая &quot;Зарегистрироваться&quot;  вы соглашаетесь с нашей Политикой конфиденциальности и Договором оферты"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>